--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,15 +13,6 @@ body {
   color: white;
   position: relative;
 }
-body header {
-  width: 100%;
-  height: 100vh;
-  background-image: url("/assets/images/cyborg og.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: -4rem 0 0 0;
-  background-position-y: -10rem;
-}
 body header nav {
   width: 100%;
   height: 11%;
@@ -47,7 +38,16 @@ body header nav .para2 a {
   text-decoration: none;
   color: white;
 }
-body header #para4 {
+body header .background {
+  background-image: url("/assets/images/cyborg og.jpg");
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: -10rem;
+  margin: -4rem 0 0 0;
+}
+body header .background #para4 {
   width: 50%;
   height: 100%;
   margin: 8rem auto;
@@ -56,13 +56,13 @@ body header #para4 {
   justify-content: center;
   align-items: center;
 }
-body header #para4 #name {
+body header .background #para4 #name {
   font-size: 8rem;
   font-weight: 700;
   color: red;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-body header #para4 #para5 {
+body header .background #para4 #para5 {
   font-size: 2.2rem;
   margin: 0.3rem 0 0 0;
   font-weight: 900;
@@ -213,15 +213,6 @@ body footer .class2 {
     color: white;
     position: relative;
   }
-  body header {
-    width: 100%;
-    height: 100vh;
-    background-image: url("/assets/images/cyborg og.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: -4rem 0 0 0;
-    background-position-y: -10rem;
-  }
   body header nav {
     width: 100%;
     height: 11%;
@@ -247,7 +238,16 @@ body footer .class2 {
     text-decoration: none;
     color: white;
   }
-  body header #para4 {
+  body header .background {
+    background-image: url("/assets/images/cyborg og.jpg");
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: -10rem;
+    margin: -4rem 0 0 0;
+  }
+  body header .background #para4 {
     width: 50%;
     height: 90%;
     margin: 8rem auto;
@@ -256,13 +256,13 @@ body footer .class2 {
     justify-content: center;
     align-items: center;
   }
-  body header #para4 #name {
+  body header .background #para4 #name {
     font-size: 8rem;
     font-weight: 700;
     color: red;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
-  body header #para4 #para5 {
+  body header .background #para4 #para5 {
     font-size: 2.2rem;
     margin: 0.3rem 0 0 0;
     font-weight: 900;
