--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -11,13 +11,6 @@ body{
     color: white;
     position: relative;
     header{
-        width: 100%;
-        height: 100vh;
-        background-image: url('/assets/images/cyborg og.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        margin: -4rem 0 0 0;
-        background-position-y: -10rem;
         nav{
             width: 100%;
             height: 11%;
@@ -43,33 +36,43 @@ body{
                 }
             }
         }
-        #para4{
-            width: 50%;
-            height: 100%;
-            margin: 8rem auto;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            #name{
-                font-size: 8rem;
-                font-weight: 700;
-                color: red;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-            }
-            #para5{
-                font-size: 2.2rem;
-                margin: .3rem 0 0 0;
-                font-weight: 900;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                text-align: center;
-                width: 76%;
-                height: 25%;
-                text-align: center;
-                color: rgb(253, 40, 40);
-                border-bottom: 10px solid black;
+        .background{
+            background-image: url('/assets/images/cyborg og.jpg');
+            width: 100%;
+            height: 100vh;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position-y: -10rem;
+            margin: -4rem 0 0 0;
+            #para4{
+                width: 50%;
+                height: 100%;
+                margin: 8rem auto;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                #name{
+                    font-size: 8rem;
+                    font-weight: 700;
+                    color: red;
+                    font-family: Verdana, Geneva, Tahoma, sans-serif;
+                }
+                #para5{
+                    font-size: 2.2rem;
+                    margin: .3rem 0 0 0;
+                    font-weight: 900;
+                    font-family: Verdana, Geneva, Tahoma, sans-serif;
+                    text-align: center;
+                    width: 76%;
+                    height: 25%;
+                    text-align: center;
+                    color: rgb(253, 40, 40);
+                    border-bottom: 10px solid black;
+                }
             }
         }
+        
     }
     main{
         .about-us{
@@ -215,12 +218,6 @@ body{
         color: white;
         position: relative;
         header{
-            width: 100%;
-            height: 100vh;
-            background-image: url('/assets/images/cyborg og.jpg');            background-repeat: no-repeat;
-            background-size: cover;
-            margin: -4rem 0 0 0;
-            background-position-y: -10rem;
             nav{
                 width: 100%;
                 height: 11%;
@@ -246,34 +243,42 @@ body{
                     }
                 }
             }
-            #para4{
-                width: 50%;
-                height: 90%;
-                margin: 8rem auto;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                #name{
-                    font-size: 8rem;
-                    font-weight: 700;
-                    color: red;
-                    font-family: Verdana, Geneva, Tahoma, sans-serif;
+            .background{
+                background-image: url('/assets/images/cyborg og.jpg');
+                width: 100%;
+                height: 100vh;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position-y: -10rem;
+                margin: -4rem 0 0 0;
+                #para4{
+                    width: 50%;
+                    height: 90%;
+                    margin: 8rem auto;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    #name{
+                        font-size: 8rem;
+                        font-weight: 700;
+                        color: red;
+                        font-family: Verdana, Geneva, Tahoma, sans-serif;
+                    }
+                    #para5{
+                        font-size: 2.2rem;
+                        margin: .3rem 0 0 0;
+                        font-weight: 900;
+                        font-family: Verdana, Geneva, Tahoma, sans-serif;
+                        text-align: center;
+                        width: 76%;
+                        height: 25%;
+                        text-align: center;
+                        color: rgb(253, 40, 40);
+                        border-bottom: 10px solid black;
+                    }
                 }
-                #para5{
-                    font-size: 2.2rem;
-                    margin: .3rem 0 0 0;
-                    font-weight: 900;
-                    font-family: Verdana, Geneva, Tahoma, sans-serif;
-                    text-align: center;
-                    width: 76%;
-                    height: 25%;
-                    text-align: center;
-                    color: rgb(253, 40, 40);
-                    border-bottom: 10px solid black;
-                }
-            }
-        }
+        }   }
         main{
             .about-us{
                 width: 100%;
